--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.fiap</groupId>
-	<artifactId>dindin</artifactId>
+	<artifactId>digitalbusinessenablement</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dindin</name>
+	<name>digitalbusinessenablement</name>
 	<description>API do app Din Din</description>
 	<properties>
 		<java.version>17</java.version>
