--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,21 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.fiap</groupId>
-	<artifactId>digitalbusinessenablement</artifactId>
+	<artifactId>dindin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>digitalbusinessenablement</name>
+	<name>dindin</name>
 	<description>API do app Din Din</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.auth0</groupId>
