--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:digitalbusinessenablement
+spring.datasource.url=jdbc:h2:mem:carsearch
 
 server.error.include-stacktrace=never
 
